feature: new apis and fix user api responses
