# routes/users.js
@@ -15,7 +15,8 @@ const {
    unFriends,
    removeFriendRequest,
    forgetPassword,
-   changePassword
+   changePassword,
+   updatePassword
 } = require('../controllers/usersController');
 
 const router = express.Router({ mergeParams: true });
@@ -36,5 +37,6 @@ router.route('/unFriends').post(unFriends);
 router.route('/removeFriendRequest').post(removeFriendRequest);
 router.route('/forgetPassword').post(forgetPassword);
 router.route('/changePassword').post(changePassword);
+router.route('/updatePassword').post(updatePassword);
 
 module.exports = router;
